<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout style="@style/setTop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="28dip"
                    android:layout_height="28dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dip"
                    android:src="@mipmap/button_icon_more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_selector"
                    android:clickable="true"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/statement" />

                <RelativeLayout
                    android:id="@+id/rl_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_selector"
                    android:clickable="true"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_time"
                        android:textColor="#95000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tv"
                        android:text="3秒" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_main_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_selector"
                    android:text="ha" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ListView
        android:id="@+id/main_start_drawer"
        android:layout_width="250dip"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#33cccc"

        android:paddingTop="50dip"></ListView>
    <!--android:background="@drawable/bg_tab"-->
</android.support.v4.widget.DrawerLayout>
